--- a/FutureStar/FutureStar_App/templates/layouts/sidebar.html
+++ b/FutureStar/FutureStar_App/templates/layouts/sidebar.html
@@ -112,23 +112,6 @@
                      <li>
                         <a href="{% url 'eventtype_list' %}">Event Type</a>
                      </li>
-                  </ul>
-               </li>
-
-               <li class="sidebar-list">
-                  <a class="sidebar-link sidebar-title" href="#">
-                     <svg class="stroke-icon">
-                        <use href="{% static 'assets/svg/icon-sprite.svg'%}#stroke-widget"></use>
-                     </svg>
-                     <svg class="fill-icon">
-                        <use href="{% static 'assets/svg/icon-sprite.svg'%}#fill-widget"></use>
-                     </svg>
-                     <span class="lan">Blog Management</span>
-                  </a>
-                  <ul class="sidebar-submenu">
-                     <li>
-                        <a href="{% url 'news_list' %}">News</a>
-                     </li>
                      <li>
                         <a href="{% url 'partners_list' %}">Partners</a>
                      </li>
@@ -145,6 +128,14 @@
                </li>
 
                <li class="sidebar">
+                  <a class="sidebar-link sidebar-title link-nav" href="{% url 'news_list' %}">
+                     <svg class="stroke-icon">
+                        <use href="{% static 'assets/svg/icon-sprite.svg'%}#stroke-email"></use>
+                     </svg>
+                     <span class="lan">News</span>
+                  </a>
+               </li>
+               <li class="sidebar">
                   <a class="sidebar-link sidebar-title link-nav" href="{% url 'inquire_list' %}">
                      <svg class="stroke-icon">
                         <use href="{% static 'assets/svg/icon-sprite.svg'%}#stroke-sample-page"></use>
@@ -156,19 +147,26 @@
                <li class="sidebar">
                   <a class="sidebar-link sidebar-title link-nav" href="{% url 'cmspages_urls' %}">
                      <svg class="stroke-icon">
-                        <use href="{% static 'assets/svg/icon-sprite.svg'%}#stroke-sample-page"></use>
+                        <use href="{% static 'assets/svg/icon-sprite.svg'%}#stroke-landing-page"></use>
                      </svg>
                      <span class="lan">CMS Pages</span>
                   </a>
                </li>
-
-               
-               
                <li class="sidebar">
+                  <a class="sidebar-link sidebar-title link-nav" href="{% url 'System_Settings' %}">
+                     <svg class="stroke-icon">
+                        <use href="{% static 'assets/svg/icon-sprite.svg'%}#course-1"></use>
+                     </svg>
+                     <span class="lan">System Settings</span>
+                  </a>
+               </li>
+               
+               
+               <!-- <li class="sidebar">
                   <a class="sidebar-link sidebar-title link-nav" href="{% url 'System_Settings' %}">
                      <i class="icon-settings"> </i> &nbsp;&nbsp;&nbsp; <span class="lan">System Settings</span>
                   </a>
-               </li>
+               </li> -->
                <!-- <li class="sidebar">
                   <a class="sidebar-link sidebar-title link-nav" href="{% url 'System_Settings' %}">
                      <i class="icon-settings"></i>&nbsp;&nbsp;&nbsp; <span class="lan">System Settings</span>
