Chnage in System settings as Told by Deval Sir

--- a/FutureStar/FutureStar_App/templates/Admin/System_Settings.html
+++ b/FutureStar/FutureStar_App/templates/Admin/System_Settings.html
@@ -19,6 +19,10 @@
             <form class="form theme-form" method="post" enctype="multipart/form-data">
                 {% csrf_token %}
                 <div class="card-body">
+                    <div class="row" style="margin-bottom: 10px;">
+                        <h4>Basic Website Settings</h4>
+                    </div>
+                    <div style="border-top: 1px solid #ccc; margin-top: 5px; margin-bottom: 20px;"></div>
                     <!-- Website Name (English) -->
                     <div class="row">
                         <div class="col-6">
@@ -76,7 +80,53 @@
                             </div>
                         </div>
                     </div>
-
+                    <div class="row" style="margin-bottom: 10px;">
+                        <h4>Achievements of App</h4>
+                    </div>
+                    <div style="border-top: 1px solid #ccc; margin-top: 5px; margin-bottom: 20px;"></div>                    
+                    <!-- Achivemets of app -->
+                    <div class="row">
+                        <div class="col-3">
+                            <div class="mb-3">
+                                <label class="form-label" for="happy_user">Happy User</label>
+                                <input class="form-control btn-pill {% if errors.happy_user %}is-invalid{% endif %}" id="happy_user" name="happy_user" type="text" value="{{ system_settings.happy_user }}" placeholder="Happy User">
+                                {% if errors.happy_user %}
+                                    <div class="invalid-feedback">{{ errors.happy_user }}</div>
+                                {% endif %}
+                            </div>
+                        </div>
+                        <div class="col-3">
+                            <div class="mb-3">
+                                <label class="form-label" for="line_of_code">Line of code</label>
+                                <input class="form-control btn-pill {% if errors.line_of_code %}is-invalid{% endif %}" id="line_of_code" name="line_of_code" type="text" value="{{ system_settings.line_of_code }}" placeholder="Line of Code">
+                                {% if errors.line_of_code %}
+                                    <div class="invalid-feedback">{{ errors.line_of_code }}</div>
+                                {% endif %}
+                            </div>
+                        </div>
+                        <div class="col-3">
+                            <div class="mb-3">
+                                <label class="form-label" for="downloads">Number of Downloads</label>
+                                <input class="form-control btn-pill {% if errors.downloads %}is-invalid{% endif %}" id="downloads" name="downloads" type="text" value="{{ system_settings.downloads }}" placeholder="Number of Downloads">
+                                {% if errors.downloads %}
+                                    <div class="invalid-feedback">{{ errors.downloads }}</div>
+                                {% endif %}
+                            </div>
+                        </div>
+                        <div class="col-3">
+                            <div class="mb-3">
+                                <label class="form-label" for="phone">App Rate</label>
+                                <input class="form-control btn-pill {% if errors.app_rate %}is-invalid{% endif %}" id="app_rate" name="app_rate" type="text" value="{{ system_settings.app_rate }}" placeholder="App Rate">
+                                {% if errors.app_rate %}
+                                    <div class="invalid-feedback">{{ errors.app_rate }}</div>
+                                {% endif %}
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row" style="margin-bottom: 10px;">
+                        <h4>Website Logo's</h4>
+                    </div>
+                    <div style="border-top: 1px solid #ccc; margin-top: 5px; margin-bottom: 20px;"></div>
                     <!-- Favicon -->
                     <div class="row">
                         <div class="col-4">
@@ -112,7 +162,10 @@
                             </div>
                         </div>
                     </div>
-
+                    <div class="row" style="margin-bottom: 10px;">
+                        <h4>Social Media Link</h4>
+                    </div>
+                    <div style="border-top: 1px solid #ccc; margin-top: 5px; margin-bottom: 20px;"></div>
                     <!-- Social Media Links -->
                     <div class="row">
                         <div class="col">
