--- a/FutureStar/FutureStar_App/templates/layouts/sidebar.html
+++ b/FutureStar/FutureStar_App/templates/layouts/sidebar.html
@@ -58,10 +58,16 @@
                   </a>
                   <ul class="sidebar-submenu">
                      <li>
-                        <a href="{% url 'user_list' %}">Player List</a>
+                        <a href="{% url 'role_list' %}">User Roles</a>
                      </li>
                      <li>
-                        <a href="{% url 'role_list' %}">User Roles</a>
+                        <a href="{% url 'player_list' %}">Player List</a>
+                     </li>
+                     <li>
+                        <a href="{% url 'coach_list' %}">Coach List</a>
+                     </li>
+                     <li>
+                        <a href="{% url 'referee_list' %}">Referee List</a>
                      </li>
                      <li>
                         <a href="{% url 'category_list' %}">Category Type</a>
@@ -71,7 +77,7 @@
                
                <!-- 
                <li class="sidebar">
-                  <a class="sidebar-link sidebar-title link-nav" href="{% url 'user_list' %}">
+                  <a class="sidebar-link sidebar-title link-nav" href="{% url 'player_list' %}">
                      <svg class="stroke-icon">
                         <use href="{% static 'assets/svg/icon-sprite.svg'%}#stroke-user"></use>
                      </svg>
