--- a/FutureStar/FutureStar_App/templates/layouts/header.html
+++ b/FutureStar/FutureStar_App/templates/layouts/header.html
@@ -139,16 +139,24 @@
                   </div>
                 </div>
                 <ul class="profile-dropdown onhover-show-div">
-                 <li><a href="{% url 'user_profile' %}" ><i data-feather="user"></i><span>Account </span></a></li>
-                 
-                  <li><a href="#" data-bs-toggle="modal" data-bs-target="#logoutModal"><i data-feather="log-in"> </i><span>Log-out</span></a></li>
-                  <li>
+                 <li>
+                    <a href="{% url 'user_profile' %}" >
+                        <i data-feather="user"></i>
+                        <span>Account </span>
+                    </a>
+                </li>
+                <li>
                     <a href="#" data-bs-toggle="modal" data-bs-target="#changePasswordModal">
                         <i data-feather="settings"> </i>
                         <span>Password</span>
                     </a>
                 </li>
-                
+                <li>
+                    <a href="#" data-bs-toggle="modal" data-bs-target="#logoutModal">
+                        <i data-feather="log-in"></i>
+                        <span>Log-out</span>
+                    </a>
+                </li>
                 </ul>
               </li>
             </ul>
