--- a/FutureStar/FutureStar_App/templates/layouts/sidebar.html
+++ b/FutureStar/FutureStar_App/templates/layouts/sidebar.html
@@ -130,6 +130,9 @@
                      <li>
                         <a href="{% url 'testimonial_list' %}">Testimonial</a>
                      </li>
+                     <li>
+                        <a href="{% url 'slider_content_list' %}">Slider Content</a>
+                     </li>
                   </ul>
                </li>
 
@@ -142,11 +145,27 @@
                   </a>
                </li>
                <li class="sidebar">
+                  <a class="sidebar-link sidebar-title link-nav" href="{% url 'team_members_list' %}">
+                     <svg class="stroke-icon">
+                        <use href="{% static 'assets/svg/icon-sprite.svg'%}#stroke-email"></use>
+                     </svg>
+                     <span class="lan">Future Star Team</span>
+                  </a>
+               </li>
+               <li class="sidebar">
+                  <a class="sidebar-link sidebar-title link-nav" href="{% url 'app_feature_list' %}">
+                     <svg class="stroke-icon">
+                        <use href="{% static 'assets/svg/icon-sprite.svg'%}#stroke-email"></use>
+                     </svg>
+                     <span class="lan">App Feature</span>
+                  </a>
+               </li>
+               <li class="sidebar">
                   <a class="sidebar-link sidebar-title link-nav" href="{% url 'inquire_list' %}">
                      <svg class="stroke-icon">
                         <use href="{% static 'assets/svg/icon-sprite.svg'%}#stroke-sample-page"></use>
                      </svg>
-                     <span class="lan">Inquires</span>
+                     <span class="lan">Contact-Us Inquires</span>
                   </a>
                </li>
 
